解决lvgl的tiny_ttf.c的中英文显示bug-> tiny_ttf_glyph_cache_create_cb 函数中的 adv_w 计算逻辑。当 dsc->kerning != LV_FONT_KERNING_NORMAL 时，它仍然调用了 ttf_get_glyph_pair_kerning_width，这可能导致问题。，当 dsc->kerning != LV_FONT_KERNING_NORMAL 时，代码调用了 ttf_get_glyph_pair_kerning_width(dsc, g1, 0, advw)，这里传入的第二个 glyph index 是 0，这可能导致不正确的宽度计算 解决C#中文本输入的各种bug。

--- a/VduEditor/VduEditor.vcxproj
+++ b/VduEditor/VduEditor.vcxproj
@@ -141,6 +141,28 @@
     <ClInclude Include="lv_conf.h" />
     <ClInclude Include="lvgl_lua_bindings.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="lua\demo_button.lua" />
+    <None Include="lua\demo_trend_chart.lua" />
+    <None Include="lua\demo_valve.lua" />
+    <None Include="lua\demo_valve_control.lua" />
+    <None Include="lua\editor\CanvasArea.lua" />
+    <None Include="lua\editor\CanvasList.lua" />
+    <None Include="lua\editor\ColorDialog.lua" />
+    <None Include="lua\editor\main_editor.lua" />
+    <None Include="lua\editor\MenuBar.lua" />
+    <None Include="lua\editor\PropertyArea.lua" />
+    <None Include="lua\editor\tools_box.lua" />
+    <None Include="lua\general.lua" />
+    <None Include="lua\print_widget_meta.lua" />
+    <None Include="lua\widgets\button.lua" />
+    <None Include="lua\widgets\status_bar.lua" />
+    <None Include="lua\widgets\trend_chart.lua" />
+    <None Include="lua\widgets\valve.lua" />
+  </ItemGroup>
+  <ItemGroup>
+    <Font Include="fonts\simhei.ttf" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
