增加跳转事件/actions/page_navigation.lua button.lua中增加时间绑定属性 属性区域中增加事件绑定控件

--- a/VduEditor/VduEditor.vcxproj
+++ b/VduEditor/VduEditor.vcxproj
@@ -142,6 +142,7 @@
     <ClInclude Include="lvgl_lua_bindings.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="lua\actions\page_navigation.lua" />
     <None Include="lua\demo_button.lua" />
     <None Include="lua\demo_trend_chart.lua" />
     <None Include="lua\demo_valve.lua" />
