将lua和lvgl统一编译到lvglluabinding中

--- a/LvglLuaBinding/LvglLuaBinding.vcxproj
+++ b/LvglLuaBinding/LvglLuaBinding.vcxproj
@@ -19,7 +19,14 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="lvgl_lua_bindings.h" />
     <ClInclude Include="lv_conf.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="lvgl_lua_bindings.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\Output\Objects\Debug\LvglLuaBinding\x64\LvglLuaBinding.def" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>18.0</VCProjectVersion>
@@ -46,7 +53,7 @@
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v145</PlatformToolset>
-    <CharacterSet>Unicode</CharacterSet>
+    <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
@@ -111,18 +118,21 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;LVGLLUABINDING_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG;LVGLLUABINDING_EXPORTS;_WINDOWS;_USRDLL;LV_CONF_INCLUDE_SIMPLE;LV_USE_DEV_VERSION;_CRT_SECURE_NO_WARNINGS;_CRT_NONSTDC_NO_WARNINGS;LUA_BUILD_AS_DLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp20</LanguageStandard>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <PrecompiledHeaderFile>
       </PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>$(ProjectDir)..\LvglPlatform;$(ProjectDir)..\lua;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir);$(ProjectDir)..\LvglPlatform;$(ProjectDir)..\lua;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableUAC>false</EnableUAC>
+      <ModuleDefinitionFile>$(IntDir)LvglLuaBinding.def</ModuleDefinitionFile>
+      <AdditionalLibraryDirectories>%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -147,4 +157,47 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
+  <!-- LVGL Source Files -->
+  <Target Name="LvglBuildSource" BeforeTargets="BeforeClCompile">
+    <ItemGroup>
+      <ClCompile Include="$(ProjectDir)..\LvglPlatform\lvgl\src\**\*.c" />
+    </ItemGroup>
+  </Target>
+  <!-- Lua Source Files -->
+  <Target Name="LuaBuildSource" BeforeTargets="BeforeClCompile">
+    <ItemGroup>
+      <ClCompile Include="$(ProjectDir)..\lua\lapi.c" />
+      <ClCompile Include="$(ProjectDir)..\lua\lauxlib.c" />
+      <ClCompile Include="$(ProjectDir)..\lua\lbaselib.c" />
+      <ClCompile Include="$(ProjectDir)..\lua\lcode.c" />
+      <ClCompile Include="$(ProjectDir)..\lua\lcorolib.c" />
+      <ClCompile Include="$(ProjectDir)..\lua\lctype.c" />
+      <ClCompile Include="$(ProjectDir)..\lua\ldblib.c" />
+      <ClCompile Include="$(ProjectDir)..\lua\ldebug.c" />
+      <ClCompile Include="$(ProjectDir)..\lua\ldo.c" />
+      <ClCompile Include="$(ProjectDir)..\lua\ldump.c" />
+      <ClCompile Include="$(ProjectDir)..\lua\lfunc.c" />
+      <ClCompile Include="$(ProjectDir)..\lua\lgc.c" />
+      <ClCompile Include="$(ProjectDir)..\lua\linit.c" />
+      <ClCompile Include="$(ProjectDir)..\lua\liolib.c" />
+      <ClCompile Include="$(ProjectDir)..\lua\llex.c" />
+      <ClCompile Include="$(ProjectDir)..\lua\lmathlib.c" />
+      <ClCompile Include="$(ProjectDir)..\lua\lmem.c" />
+      <ClCompile Include="$(ProjectDir)..\lua\loadlib.c" />
+      <ClCompile Include="$(ProjectDir)..\lua\lobject.c" />
+      <ClCompile Include="$(ProjectDir)..\lua\lopcodes.c" />
+      <ClCompile Include="$(ProjectDir)..\lua\loslib.c" />
+      <ClCompile Include="$(ProjectDir)..\lua\lparser.c" />
+      <ClCompile Include="$(ProjectDir)..\lua\lstate.c" />
+      <ClCompile Include="$(ProjectDir)..\lua\lstring.c" />
+      <ClCompile Include="$(ProjectDir)..\lua\lstrlib.c" />
+      <ClCompile Include="$(ProjectDir)..\lua\ltable.c" />
+      <ClCompile Include="$(ProjectDir)..\lua\ltablib.c" />
+      <ClCompile Include="$(ProjectDir)..\lua\ltm.c" />
+      <ClCompile Include="$(ProjectDir)..\lua\lundump.c" />
+      <ClCompile Include="$(ProjectDir)..\lua\lutf8lib.c" />
+      <ClCompile Include="$(ProjectDir)..\lua\lvm.c" />
+      <ClCompile Include="$(ProjectDir)..\lua\lzio.c" />
+    </ItemGroup>
+  </Target>
 </Project>
