--- a/VduEditor/VduEditor.vcxproj
+++ b/VduEditor/VduEditor.vcxproj
@@ -154,6 +154,10 @@
     <None Include="lua\editor\MenuBar.lua" />
     <None Include="lua\editor\ProjectManager.lua" />
     <None Include="lua\editor\PropertyArea.lua" />
+    <None Include="lua\editor\PropertyEventEditor.lua" />
+    <None Include="lua\editor\PropertyInputs.lua" />
+    <None Include="lua\editor\PropertyPageEditor.lua" />
+    <None Include="lua\editor\PropertyWidgetEditor.lua" />
     <None Include="lua\editor\tools_box.lua" />
     <None Include="lua\general.lua" />
     <None Include="lua\print_widget_meta.lua" />
